--- a/clientt/src/index.css
+++ b/clientt/src/index.css
@@ -7,15 +7,15 @@
 
 
 .linear-gradient {
-    background: hsla(225, 40%, 54%, 1);
+    background: hsla(248, 21%, 15%, 1);
 
-    background: linear-gradient(90deg, hsla(225, 40%, 54%, 1) 0%, rgb(65, 20, 90) 100%);
-    
-    background: -moz-linear-gradient(90deg, hsla(225, 40%, 54%, 1) 0%, hsla(284, 66%, 19%, 1) 100%);
-    
-    background: -webkit-linear-gradient(90deg, rgb(34, 51, 102) 0%, rgb(62, 16, 80) 100%);
-    
-    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#5C73B9", endColorstr="#3E104F", GradientType=1 );
+background: linear-gradient(90deg, rgb(25, 23, 36) 0%, rgb(59, 52, 97) 100%);
+
+background: -moz-linear-gradient(90deg, hsla(248, 21%, 15%, 1) 0%, rgb(68, 64, 92) 100%);
+
+background: -webkit-linear-gradient(90deg, hsla(248, 21%, 15%, 1) 0%, rgb(83, 77, 113) 100%);
+
+filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#211F2F", endColorstr="#918CA9", GradientType=1 );
 }
 
 
